--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,8 @@ flutter:
         pluginClass: ConnectivityPlusPlugin
 
       web:
-        default_package: connectivity_plus_web
+        pluginClass: ConnectivityPlusWebPlugin
+        fileName: src/connectivity_plus_web.dart
 
 dependencies:
   flutter:
